probando las librerias

--- a/OneDrive/Documentos/COMPU VISUAL/Proyecto/nbproject/project.properties
+++ b/OneDrive/Documentos/COMPU VISUAL/Proyecto/nbproject/project.properties
@@ -42,7 +42,9 @@ javac.classpath=\
     ${libs.prueba.classpath}:\
     ${libs.jasper.classpath}:\
     ${libs.JasperReports.classpath}:\
-    ${libs.Jaspers.classpath}
+    ${libs.Jaspers.classpath}:\
+    ${libs.Jasper.classpath}:\
+    ${libs.JDBCCUARTO.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
